# hunter_bipedal_control

./: .gitignore  README.md
legged_controllers/config/hunter/: reference.info  task.info
legged_controllers/include/legged_controllers/: LeggedController.h
legged_controllers/launch/: one_start_gazebo.launch
legged_controllers/rviz/: legged_robot.rviz
legged_controllers/src/: LeggedController.cpp
legged_examples/legged_bridge/legged_bridge_hw/launch/: legged_bridge_lively_HW.launch
legged_examples/legged_bridge/legged_bridge_hw/scripts/: send_cmd.py
legged_examples/legged_bridge/legged_bridge_hw/src/: BridgeHW.cpp
legged_examples/legged_hunter/legged_hunter_description/meshes/: l_calf_link.STL  l_hip_roll_link.STL  l_hip_yaw_link.STL  l_thigh_link.STL  l_toe_link.STL  r_calf_link.STL  r_hip_roll_link.STL  r_hip_yaw_link.STL  r_thigh_link.STL
legged_examples/legged_hunter/legged_hunter_description/meshes_pi/: base_link.STL  leg_l1_link.STL  leg_l2_link.STL  leg_l3_link.STL  leg_l4_link.STL  leg_l5_link.STL  leg_r1_link.STL  leg_r2_link.STL  leg_r3_link.STL  leg_r4_link.STL  leg_r5_link.STL
legged_examples/legged_hunter/legged_hunter_description/urdf/: hunter.urdf  hunter_sim.urdf
legged_examples/legged_hunter/legged_hunter_description/urdf/pi/: hunter_sim.urdf
legged_examples/legged_hunter/legged_hunter_description/urdf/source/: hunter.urdf
legged_hw/: CMakeLists.txt  package.xml
legged_hw/include/legged_hw/: LeggedHW.h
legged_hw/src/: LeggedHW.cpp
legged_interface/include/legged_interface/: LeggedInterface.h
legged_interface/include/legged_interface/common/: ModelSettings.h
legged_interface/src/: LeggedInterface.cpp
legged_interface/src/visualization/: LeggedRobotVisualizer.cpp
livelybot_imu/: CMakeLists.txt  package.xml  udev.sh
livelybot_imu/config/: imu.rviz
livelybot_imu/include/: ahrs_driver.h  fdilink_data_struct.h
livelybot_imu/launch/: livelybot_imu_driver.launch  livelybot_imu_driver_rviz.launch  tf.launch
livelybot_imu/src/: ahrs_driver.cpp
livelybot_serial/: CMakeLists.txt  package.xml
livelybot_serial/include/: lively_serial.h
livelybot_serial/include/hardware/: motor.h  robot.h
livelybot_serial/src/: lively_serial.cc  serial_t.cpp  sub_imu.cpp  test_motor.cpp  test_motor_run.cpp
livelybot_serial/src/hardware/: motor.cc
